<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2015-2022 Evolveum
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>connector-parent</artifactId>
        <groupId>com.evolveum.polygon</groupId>
        <version>1.5.2.0</version>
    </parent>

    <groupId>com.atricore.iam.evolveum.connector</groupId>
    <artifactId>connector-convenia</artifactId>
    <version>1.2.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Convenia Midpoint Connector</name>

    <properties>
        <connectorPackage>com.atricore.iam.midpoint.connector.convenia</connectorPackage>
        <connectorClass>ConveniaConnector</connectorClass>
        <surefire.args>-Xms1024m -Xmx4096m --add-exports java.management/sun.management=ALL-UNNAMED</surefire.args>
        </properties>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>midPoint Connector for Convenia - GitHub Packages</name>
            <url>https://maven.pkg.github.com/atricore/midpoint-connector-convenia</url>
        </repository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>evolveum</id>
            <name>Evolveum Public Releases</name>
            <url>https://nexus.evolveum.com/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <id>evolveum-snapshots</id>
            <name>Evolveum Snapshots</name>
            <url>https://nexus.evolveum.com/nexus/content/repositories/snapshots/</url>
        </repository>

        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/atricore/convenia-api-java</url>
        </repository>

    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>${surefire.args}</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>

        <dependency>
            <groupId>com.atricore.iam.convenia.api</groupId>
            <artifactId>convenia-api-client</artifactId>
            <version>1.2.3</version>
        </dependency>

        <dependency>
            <groupId>net.tirasa.connid</groupId>
            <artifactId>connector-framework</artifactId>
            <version>1.5.1.10</version>
        </dependency>

        <!-- Avoid dependency on slf4j-jdk14 SLF4J bridge.
             In midPoint the JUL is bridged back to SLF4J.
             Even though the connector should use JUL,
             bridge over a bridge is not a good idea. It causes
             problems. Therefore we rather be non-compliant
             than non-working. -->

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.14.0</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.17</version>
            <scope>provided</scope>
        </dependency>

        <!-- TEST DEPENDENCIES -->

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.15.1</version>
            <scope>test</scope>
        </dependency>





    </dependencies>
</project>
